refactor: change on product controller and aditional files in order to consume jetstock api
